# onnx_examples

./: CMakeLists.txt  MNIST.cpp  Makefile  README.MD  setup.py
cmake/: FindOnnxRuntime.cmake
src/: MNIST.cpp  MNIST.hpp  dcn.cpp  dcn.hpp  deform_conv.cpp  main.cpp  modulated_deform_conv.cpp
testdata/dcn/: model.onnx
testdata/mdcn/: model.onnx
